--- a/simple game.ipynb
+++ b/simple game.ipynb
@@ -66,7 +66,7 @@
     "   else:\n",
     "          print(\"invalid option is choose\")\n",
     "        \n",
-    "   play_again=input(\"yes/no:?\").lower()\n",
+    "   play_again=input(\"do you want to play again?yes/no:\").lower()\n",
     "   if play_again!='yes':\n",
     "         break\n",
     "print(\"bye!\")"
